{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 46,
  "lineage": "8f902119-f733-fcbe-0e18-56586d419fd6",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mgmt_box",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06883c95d78ea3e7a",
            "arn": "arn:aws:ec2:us-east-1:571600832077:instance/i-070bf71c9e85ef035",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "coalfire-sre-challenge-ec2-profile-20250909145437980500000003",
            "id": "i-070bf71c9e85ef035",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "coalfire-challenge-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f68121f6e69e78a0",
            "private_dns": "ip-10-1-1-159.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.159",
            "public_dns": "ec2-3-235-100-110.compute-1.amazonaws.com",
            "public_ip": "3.235.100.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Owner": "sre-team",
                  "Project": "coalfire-sre-challenge",
                  "Purpose": "technical-challenge"
                },
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Owner": "sre-team",
                  "Project": "coalfire-sre-challenge",
                  "Purpose": "technical-challenge"
                },
                "throughput": 125,
                "volume_id": "vol-06fb93e5c49e2cde9",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a91fc1a5e5a49b8d",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-mgmt-box",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge",
              "Type": "Management"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-mgmt-box",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge",
              "Type": "Management"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b3cbc071950581ea"
            ]
          },
          "dependencies": [
            "module.compute.aws_iam_instance_profile.ec2_profile",
            "module.compute.aws_iam_role.ec2_role",
            "module.compute.data.aws_ami.amazon_linux",
            "module.security.aws_security_group.management",
            "module.vpc.aws_subnet.management",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:571600832077:loadbalancer/app/coalfire-sre-challenge-alb/85ed743d2dbfa51e",
            "arn_suffix": "app/coalfire-sre-challenge-alb/85ed743d2dbfa51e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "coalfire-sre-challenge-alb-1627102278.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:571600832077:loadbalancer/app/coalfire-sre-challenge-alb/85ed743d2dbfa51e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "coalfire-sre-challenge-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-02108cc2dc8f3a0c5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00be8b4e7538f35c5"
              },
              {
                "subnet_id": "subnet-0a91fc1a5e5a49b8d"
              }
            ],
            "subnets": [
              "subnet-00be8b4e7538f35c5",
              "subnet-0a91fc1a5e5a49b8d"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-alb",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-alb",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "vpc_id": "vpc-0ec596dba2594f886",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.management",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:571600832077:listener/app/coalfire-sre-challenge-alb/85ed743d2dbfa51e/8612fbc5845abd64",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:571600832077:targetgroup/coalfire-sre-challenge-app-tg/a3270f14a19a3826",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:571600832077:listener/app/coalfire-sre-challenge-alb/85ed743d2dbfa51e/8612fbc5845abd64",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:571600832077:loadbalancer/app/coalfire-sre-challenge-alb/85ed743d2dbfa51e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.application",
            "module.load_balancer.aws_lb_target_group.application",
            "module.security.aws_security_group.alb",
            "module.vpc.aws_subnet.management",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:571600832077:targetgroup/coalfire-sre-challenge-app-tg/a3270f14a19a3826",
            "arn_suffix": "targetgroup/coalfire-sre-challenge-app-tg/a3270f14a19a3826",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:571600832077:targetgroup/coalfire-sre-challenge-app-tg/a3270f14a19a3826",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:571600832077:loadbalancer/app/coalfire-sre-challenge-alb/85ed743d2dbfa51e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "coalfire-sre-challenge-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-app-tg",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-app-tg",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ec596dba2594f886"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600832077:network-acl/acl-0a01be92b7bf58dac",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a01be92b7bf58dac",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.1.0.0/16",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.1.0.0/16",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "571600832077",
            "subnet_ids": [
              "subnet-04d9ea5ca9f8e7251",
              "subnet-0f9050dbed708de98"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-app-nacl",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-app-nacl",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "vpc_id": "vpc-0ec596dba2594f886"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.application",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600832077:network-acl/acl-052bb38edd0a0933a",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-052bb38edd0a0933a",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 106,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 105,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "151.202.45.111/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "571600832077",
            "subnet_ids": [
              "subnet-00be8b4e7538f35c5",
              "subnet-0a91fc1a5e5a49b8d"
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-mgmt-nacl",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-mgmt-nacl",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "vpc_id": "vpc-0ec596dba2594f886"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_subnet.management",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600832077:security-group/sg-02108cc2dc8f3a0c5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02108cc2dc8f3a0c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "coalfire-sre-challenge-alb-20250909145449625200000005",
            "name_prefix": "coalfire-sre-challenge-alb-",
            "owner_id": "571600832077",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-alb-sg",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-alb-sg",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec596dba2594f886"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600832077:security-group/sg-011c427abeb3b9874",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011c427abeb3b9874",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02108cc2dc8f3a0c5"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from mgmt",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b3cbc071950581ea"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "coalfire-sre-challenge-web-20250909145452430900000008",
            "name_prefix": "coalfire-sre-challenge-web-",
            "owner_id": "571600832077",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-web-sg",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-web-sg",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec596dba2594f886"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb",
            "module.security.aws_security_group.management",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600832077:security-group/sg-0b3cbc071950581ea",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3cbc071950581ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "151.202.45.111/32"
                ],
                "description": "SSH access from allowed source",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "coalfire-sre-challenge-mgmt-20250909145449623800000004",
            "name_prefix": "coalfire-sre-challenge-mgmt-",
            "owner_id": "571600832077",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-mgmt-sg",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-mgmt-sg",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec596dba2594f886"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069701f932761df39",
            "arn": "arn:aws:ec2:us-east-1:571600832077:elastic-ip/eipalloc-069701f932761df39",
            "association_id": "eipassoc-0123d87c5e9f61a5d",
            "domain": "vpc",
            "id": "eipalloc-069701f932761df39",
            "network_border_group": "us-east-1",
            "network_interface": "eni-047d4adfeeab3eeb7",
            "private_dns": "ip-10-1-1-191.ec2.internal",
            "private_ip": "10.1.1.191",
            "public_dns": "ec2-54-145-2-59.compute-1.amazonaws.com",
            "public_ip": "54.145.2.59",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-nat-eip",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-nat-eip",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600832077:internet-gateway/igw-0c46dd8ef76740b64",
            "id": "igw-0c46dd8ef76740b64",
            "owner_id": "571600832077",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-igw",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-igw",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "vpc_id": "vpc-0ec596dba2594f886"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069701f932761df39",
            "association_id": "eipassoc-0123d87c5e9f61a5d",
            "connectivity_type": "public",
            "id": "nat-0a2e49dd250dad304",
            "network_interface_id": "eni-047d4adfeeab3eeb7",
            "private_ip": "10.1.1.191",
            "public_ip": "54.145.2.59",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a91fc1a5e5a49b8d",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-nat-gateway",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-nat-gateway",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.management",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600832077:route-table/rtb-01e70f96cc64bbc71",
            "id": "rtb-01e70f96cc64bbc71",
            "owner_id": "571600832077",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a2e49dd250dad304",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-private-routes",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-private-routes",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec596dba2594f886"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.management",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600832077:route-table/rtb-0119a67499388c755",
            "id": "rtb-0119a67499388c755",
            "owner_id": "571600832077",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c46dd8ef76740b64",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-public-routes",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-public-routes",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec596dba2594f886"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0771ced9754c6f213",
            "route_table_id": "rtb-01e70f96cc64bbc71",
            "subnet_id": "subnet-0f9050dbed708de98"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.application",
            "module.vpc.aws_subnet.management",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6d65676f43c1f07",
            "route_table_id": "rtb-01e70f96cc64bbc71",
            "subnet_id": "subnet-04d9ea5ca9f8e7251"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.application",
            "module.vpc.aws_subnet.management",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea4b1f094cdcc63b",
            "route_table_id": "rtb-01e70f96cc64bbc71",
            "subnet_id": "subnet-01678f2688a314d3b"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.backend",
            "module.vpc.aws_subnet.management",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7a6e24463057dc7",
            "route_table_id": "rtb-01e70f96cc64bbc71",
            "subnet_id": "subnet-09ee6d00fd49490fd"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.backend",
            "module.vpc.aws_subnet.management",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03546ccf1b4295e01",
            "route_table_id": "rtb-0119a67499388c755",
            "subnet_id": "subnet-0a91fc1a5e5a49b8d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.management",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d34ad2e7e8ad264b",
            "route_table_id": "rtb-0119a67499388c755",
            "subnet_id": "subnet-00be8b4e7538f35c5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.management",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600832077:subnet/subnet-0f9050dbed708de98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9050dbed708de98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "571600832077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-app-subnet-1",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge",
              "Type": "Application"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-app-subnet-1",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge",
              "Type": "Application"
            },
            "vpc_id": "vpc-0ec596dba2594f886"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600832077:subnet/subnet-04d9ea5ca9f8e7251",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d9ea5ca9f8e7251",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "571600832077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-app-subnet-2",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge",
              "Type": "Application"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-app-subnet-2",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge",
              "Type": "Application"
            },
            "vpc_id": "vpc-0ec596dba2594f886"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600832077:subnet/subnet-01678f2688a314d3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01678f2688a314d3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "571600832077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-backend-subnet-1",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge",
              "Type": "Backend"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-backend-subnet-1",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge",
              "Type": "Backend"
            },
            "vpc_id": "vpc-0ec596dba2594f886"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600832077:subnet/subnet-09ee6d00fd49490fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ee6d00fd49490fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "571600832077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-backend-subnet-2",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge",
              "Type": "Backend"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-backend-subnet-2",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge",
              "Type": "Backend"
            },
            "vpc_id": "vpc-0ec596dba2594f886"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600832077:subnet/subnet-0a91fc1a5e5a49b8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a91fc1a5e5a49b8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "571600832077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-mgmt-subnet-1",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge",
              "Type": "Management"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-mgmt-subnet-1",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge",
              "Type": "Management"
            },
            "vpc_id": "vpc-0ec596dba2594f886"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600832077:subnet/subnet-00be8b4e7538f35c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00be8b4e7538f35c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "571600832077",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-mgmt-subnet-2",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge",
              "Type": "Management"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-mgmt-subnet-2",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge",
              "Type": "Management"
            },
            "vpc_id": "vpc-0ec596dba2594f886"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:571600832077:vpc/vpc-0ec596dba2594f886",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0b465b2801a4a2cc9",
            "default_route_table_id": "rtb-07b0084467b39e4d9",
            "default_security_group_id": "sg-0ce1986569cf451d9",
            "dhcp_options_id": "dopt-0dae0b5a7f03d12d1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec596dba2594f886",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b0084467b39e4d9",
            "owner_id": "571600832077",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-vpc",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "coalfire-sre-challenge-vpc",
              "Owner": "sre-team",
              "Project": "coalfire-sre-challenge",
              "Purpose": "technical-challenge"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}